--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ms Wood's Site</title>
+    <title>Ms lizeth's Site</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="lizeth lara">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +33,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://lizethlara15.github.io/">lizeth lara's Site</a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>Ms Wood's Site</font></h2>
+  <font color="orange"> <h2> lizeths Site</font></h2>
 </div>
 
 <div class="row-fluid">
