--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is Joy Wood and I'm a Computer Science teacher at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> See me if you want to talk about rock climbing, Game of Thrones season 8, Will Smith, or just general life stuff. </p>
+    <p> Welcome to my webpage. My name is lizeth and I'm a student <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> im creative , i like to watch movies and draw, or just general life stuff. </p>
       <img src="puppy.webp">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
