--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is lizeth and I'm a student <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> Welcome to my webpage. My name is lizeth <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> im creative , i like to watch movies and draw, or just general life stuff. </p>
       <img src="puppy.webp">
 <div class="page-header">
