--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="page-header">
   <font color="orange"> <h2>My Resume  </font></h2>
 </div>
-
+<img src = "download.jpg">
 <p>Check out all my cool <a href="Teaching_Resume_Wood.pdf">qualifications</a>.</p>
 
       </div>
