--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <li><a href="http://www.steamgirlsvt.com/the-team.html">Steam Girls</a></li>
     <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
-    <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
+    <li><a href="dogs.html"</a></li>
 
 </ul>
 
