--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         
 
 <div class="page-header">
-  <font color="black"> <h2> lizeths Site</font></h2>
+  <font color="black"> <h2> lizeths site</font></h2>
 </div>
 
 <div class="row-fluid">
